<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3E3E3E"
    tools:context=".ui.fragments.profile.ProfileFragment" >

    <com.github.siyamed.shapeimageview.RoundedImageView
        android:id="@+id/userImg"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:contentDescription="@string/image_for_the_recipe"
        android:layout_marginTop="50dp"
        android:src="@drawable/ic_baseline_person_pin_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:siRadius="100dp"
        app:siSquare="true" />

    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/indie_flower"
        android:text="@string/username"
        android:textColor="@color/design_default_color_on_primary"
        android:textSize="30sp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userImg" />

    <com.sanojpunchihewa.glowbutton.GlowButton
        android:id="@+id/logOutButton"
        android:layout_width="125dp"
        android:layout_height="75dp"
        android:layout_marginTop="25dp"
        android:text="@string/log_out"
        android:textColor="@color/white"
        app:buttonColor="#FF5B4D"
        app:cornerRadius="50dp"
        app:glowColor="@color/purple_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userName"
        app:pressedGlowSize="5dp"
        app:unpressedGlowSize="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>