<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3E3E3E"
    android:id="@+id/scrollView"
    android:orientation="vertical"
    tools:context=".ui.fragments.addrecipe.AddRecipeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottieCook"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:background="@drawable/image_frame"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/cooking" />

        <TextView
            android:id="@+id/textViewCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/indie_flower"
            android:text="@string/category"
            android:textColor="@color/design_default_color_on_primary"
            android:textSize="30sp"
            app:layout_constraintEnd_toStartOf="@+id/categorySpinner"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lottieCook" />

        <org.angmarch.views.NiceSpinner
            android:id="@+id/categorySpinner"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="#82B1FF"
            android:fontFamily="@font/indie_flower"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textViewCategory"
            app:layout_constraintTop_toBottomOf="@+id/lottieCook" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="20dp"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewCategory" />

        <TextView
            android:id="@+id/textViewIngredients"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/indie_flower"
            android:text="@string/extendedIngredients"
            android:textColor="@color/design_default_color_on_primary"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider" />

        <com.example.justcook.util.MyListView
            android:id="@+id/listViewIngredients"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="#3E3E3E"
            android:divider="#CCFF90"
            android:dividerHeight="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewIngredients" />

        <EditText
            android:id="@+id/ingredientName"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:autofillHints="Ingredient name"
            android:backgroundTint="#FFFFFF"
            android:hint="@string/add_ingredient"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:labelFor="@+id/ingredientName"
            android:textColor="@color/design_default_color_on_primary"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/listViewIngredients" />

        <EditText
            android:id="@+id/ingredientAmount"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:autofillHints="Ingredient name"
            android:backgroundTint="#FFFFFF"
            android:hint="@string/quantity"
            android:imeOptions="actionNext"
            android:inputType="numberDecimal"
            android:labelFor="@id/ingredientAmount"
            android:textColor="@color/design_default_color_on_primary"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toStartOf="@+id/unitMeasure"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ingredientName" />

        <EditText
            android:id="@+id/unitMeasure"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:autofillHints="Unit"
            android:backgroundTint="#FFFFFF"
            android:hint="@string/unit"
            android:imeOptions="actionDone"
            android:inputType="textPersonName"
            android:labelFor="@id/unitMeasure"
            android:textColor="@color/design_default_color_on_primary"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toStartOf="@+id/add_ingredient_row"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/ingredientAmount"
            app:layout_constraintTop_toBottomOf="@+id/ingredientName" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/add_ingredient_row"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="65dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/unitMeasure"
            app:layout_constraintTop_toBottomOf="@+id/listViewIngredients"
            app:lottie_rawRes="@raw/addnew" />

        <TextView
            android:id="@+id/textViewInstructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/indie_flower"
            android:text="@string/analyzedInstructions"
            android:textColor="@color/design_default_color_on_primary"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/unitMeasure" />

        <com.example.justcook.util.MyListView
            android:id="@+id/listViewInstructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="#3E3E3E"
            android:divider="#CCFF90"
            android:dividerHeight="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewInstructions" />

        <EditText
            android:id="@+id/addInstructionMultiline"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:autofillHints="Cooking analyzedInstruction"
            android:backgroundTint="#00FFFFFF"
            android:foreground="@drawable/frame_selector"
            android:hint="@string/cooking_instruction"
            android:inputType="textMultiLine"
            android:labelFor="@id/addInstructionMultiline"
            android:textColor="#FFFFFF"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toStartOf="@+id/add_cooking_instruction"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/listViewInstructions" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/add_cooking_instruction"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/addInstructionMultiline"
            app:layout_constraintTop_toBottomOf="@+id/listViewInstructions"
            app:lottie_rawRes="@raw/addnew" />

        <EditText
            android:id="@+id/recipeTitle"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:autofillHints="Ingredient name"
            android:backgroundTint="#FFFFFF"
            android:hint="@string/recipe_title"
            android:imeOptions="actionDone"
            android:inputType="textPersonName"
            android:labelFor="@+id/ingredientName"
            android:textColor="@color/design_default_color_on_primary"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addInstructionMultiline" />

        <ImageView
            android:id="@+id/photoView"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="@drawable/frame_2_selector"
            android:src="@drawable/add_photo_placeholder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recipeTitle" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/saveRecipe"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/photoView"
            app:lottie_rawRes="@raw/savebutton" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>